[gd_scene load_steps=6 format=2]

[ext_resource path="res://enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemy/tank_enemy/tank_enemy.gd" type="Script" id=2]
[ext_resource path="res://enemy/tank_enemy/Tank.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 250, 60 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 39.0435, 16.4626 )

[node name="TankEnemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" parent="." index="2"]
texture = ExtResource( 3 )
hframes = 1

[node name="BulletShoot" type="Position2D" parent="Sprite" index="0"]
position = Vector2( 0, -7 )

[node name="DetectPlayerLeft" type="Area2D" parent="." index="8"]
position = Vector2( -250, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayerLeft" index="0"]
shape = SubResource( 1 )

[node name="DetectPlayerRight" type="Area2D" parent="." index="9"]
position = Vector2( 250, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayerRight" index="0"]
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="." index="13"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 1, -1 )
shape = SubResource( 2 )
